2003-08-02  Pavel Roskin  <proski@gnu.org>

	* lib/cedit.menu: Avoid using "id -u", it doesn't work on
	Solaris.  From Andrew V. Samoilov <sav@bcs.zp.ua>

2003-07-23  Pavel Roskin  <proski@gnu.org>

	* lib/mc.lib: Add more "end" and "home" sequences for xterm.

2003-07-22  Pavel Roskin  <proski@gnu.org>

	Get rid of all references to NATIVE_WIN32.

	* pc: Remove.  No work has been done on the PC post for years.
	* README.PC: Likewise.
	* Makefile.am: Adjust for the above.
	* configure.in: Likewise.

2003-07-21  Pavel Roskin  <proski@gnu.org>

	* configure.in: Check posix_openpt() first and fallback to
	GNU-specific getpt() only if needed.

2003-06-29  David Sterba  <dave@jikos.cz>

	* lib/mc.hint.cs: Typo fixes.

2003-06-25  Marco Ciampa  <ciampix@libero.it>

	* doc/it/mc.1.in: small fix

2003-06-23  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* lib/mc.ext: Allow ZIP in all capitals in "file" output.

2003-06-18  Pavel Roskin  <proski@gnu.org>

	* configure.in: Remove test for SCO UNIX.  Remove all references
	to SCO_FLAVOR everywhere.  SCO flavor is rather unsavory now.

2003-06-06  Pavel Roskin  <proski@gnu.org>

	* lib/mc.ext.in: Don't run compressed logs from /var/log through
	nroff.  Suggested by Alfie Costa <agcosta@gmx.net>

2003-05-16  Marco Ciampa  <ciampix@libero.it>

	* syntax/ruby.syntax: upgrade
	* syntax/perl.syntax: small fix

2003-05-14  Marco Ciampa  <ciampix@libero.it>

	* syntax/ruby.syntax: New file - syntax for Ruby.
	* syntax/Syntax: Add ruby.syntax.
	* syntax/Makefile.am: Likewise.

2003-05-08  Pavel Roskin  <proski@gnu.org>

	* mc.spec.in: Strip pre-1998 changelog to work around a bug in
	rpm 4.2, which doesn't like %install inside %changelog.

2003-04-29  Pavel Roskin  <proski@gnu.org>

	* configure.in: Add vfs/extfs/iso9660 to AC_CONFIG_FILES.
	* lib/mc.ext.in: Add support for ISO images.

2003-03-31  Dmitry Alexeyev  <dmi_a@qnx.org.ru>

	* syntax/Syntax: Highlight *.mc as a makefile.
	* syntax/sql.syntax: Add more keywords for PostgreSQL.
